--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "codemirror": "^5.32.0",
     "material-ui": "^1.0.0-beta.23",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-codemirror2": "^3.0.7",
     "react-dom": "^16.2.0",
-    "react-markdown": "^3.1.0",
+    "react-markdown": "^3.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
